tests/integration/input/error.swift
// RUN: %not %neal %args | %check

x! // CHECK-L: error: No force unwrap
